--- a/portfolio.html
+++ b/portfolio.html
@@ -44,11 +44,19 @@
           <ul class="header-nav-after-list list">
             <li class="header-mail-item link">
               <a class="header-mail-link link" href="mailto:info@devstudio.com">
+                <svg class="mail-icon" width="16px" height="12px">
+                  <use href="./images/icons.svg#icon-mail"></use>
+                </svg>
                 info@devstudio.com</a
               >
             </li>
             <li class="header-tel-item link">
-              <a class="header-mail-link link" href="tel:+380961111111"> +38 096 111 11 11</a>
+              <a class="header-mail-link link" href="tel:+380961111111">
+                <svg class="mail-icon" width="10px" height="16px">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
@@ -188,32 +196,68 @@
 
     <!-- Підвал сторінки -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo link" href="./index.html">
-          <span class="footer-logo-one">Web</span>Studio</a
-        >
-        <address class="footer-adress">
-          <ul class="footer-list">
-            <li class="footer-item list">
-              <a
-                class="footer-item-link link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-item list">
-              <a class="footer-mail-link link" href="mailto:info@devstudio.com">
-                info@devstudio.com
+      <div class="container footer-container">
+        <div class="contacts">
+          <a class="footer-logo link" href="./index.html">
+            <span class="footer-logo-one">Web</span>Studio</a
+          >
+          <address class="footer-adress">
+            <ul class="footer-list">
+              <li class="footer-item list">
+                <a
+                  class="footer-item-link link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item list">
+                <a class="footer-mail-link link" href="mailto:info@devstudio.com">
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="footer-item list">
+                <a class="footer-tel-link link" href="tel:+380961111111"> +38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="container-socials">
+          <h2 class="socials">Приєднуйтесь</h2>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="footer-item list">
-              <a class="footer-tel-link link" href="tel:+380961111111"> +38 096 111 11 11</a>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
