--- a/index.html
+++ b/index.html
@@ -77,27 +77,47 @@
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="feature-list list">
-            <li class="feature-item icon-1">
+            <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="faeture-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-item-title">Увага до деталей</h3>
               <p class="featute-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="feature-item icon-2">
+            <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="faeture-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-item-title">Пунктуальність</h3>
               <p class="featute-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
 
-            <li class="feature-item icon-3">
+            <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="faeture-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-item-title">Планування</h3>
               <p class="featute-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
 
-            <li class="feature-item icon-4">
+            <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="faeture-icon" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="feature-item-title">Сучасні технології</h3>
               <p class="featute-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
