--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,10 @@
           >
           <ul class="header-nav-list list">
             <li class="header-nav-item link">
-              <a class="header-link link current" href="./index.html"> Студія</a>
+              <a class="header-link link" href="./index.html"> Студія</a>
             </li>
             <li class="header-nav-item link">
-              <a class="header-link link" href="./portfolio.html"> Портфоліо</a>
+              <a class="header-link link current" href="./portfolio.html"> Портфоліо</a>
             </li>
             <li class="header-nav-item link"><a class="header-link link" href="#"> Контакти</a></li>
           </ul>
@@ -89,7 +89,7 @@
 
           <ul class="gallery-list list">
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="gallery-link">
                 <img src="./images/portfolio/port-1.jpg" alt="ноутбук" width="370" height="294" />
                 <div class="gallery-wrap">
                   <h3 class="title">Технокряк</h3>
@@ -98,7 +98,7 @@
               >
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="gallery-link">
                 <img src="./images/portfolio/port-2.jpg" alt="баскетбол" width="370" height="294" />
                 <div class="gallery-wrap">
                   <h3 class="title">Постер New Orlean vs Golden Star</h3>
@@ -107,7 +107,7 @@
               >
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="gallery-link">
                 <img
                   src="./images/portfolio/port-3.jpg"
                   alt="емблема ресторану"
@@ -121,7 +121,7 @@
               >
             </li>
             <li class="gallery-item">
-              <a href="#"
+              <a href="#" class="gallery-link"
                 ><img
                   src="./images/portfolio/port-4.jpg"
                   alt="навушники"
@@ -135,7 +135,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="gallery-link">
                 <img src="./images/portfolio/port-5.jpg" alt="коробки" width="370" height="294" />
                 <div class="gallery-wrap">
                   <h3 class="title">Проєкт Boxes</h3>
@@ -144,7 +144,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="gallery-link">
                 <img src="./images/portfolio/port-6.jpg" alt="МАС" width="370" height="294" />
                 <div class="gallery-wrap">
                   <h3 class="title" lang="en">Inspiration has no Borders</h3>
@@ -153,7 +153,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="gallery-link">
                 <img src="./images/portfolio/port-7.jpg" alt="журнал" width="370" height="294" />
                 <div class="gallery-wrap">
                   <h3 class="title">Видання Limited Edition</h3>
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li class="gallery-item">
-              <a href="#">
+              <a href="#" class="gallery-link">
                 <img
                   src="./images/portfolio/port-8.jpg"
                   alt="проєкт lab"
@@ -176,7 +176,7 @@
               >
             </li>
             <li class="gallery-item">
-              <a href="# ">
+              <a href="# " class="gallery-link">
                 <img
                   src="./images/portfolio/port-9.jpg"
                   alt="ноутбук з відкритим додатком"
